# alex-a

./: .env.template  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/assistant/: config.py  main.py
src/assistant/auth/: google.py
src/assistant/core/: agent.py  llm.py  memory.py  tool_registry.py
src/assistant/skills/: calendar.py  gmail.py
system_prompts/: alex_email.md  alex_informal.md  alex_main.md
tests/: conftest.py  test_agent.py  test_config.py  test_discord_platform.py  test_tool_registry.py
